--- a/wx-backend/pom.xml
+++ b/wx-backend/pom.xml
@@ -17,6 +17,7 @@
 		<druid.version>1.1.10</druid.version>
 		<fastjson.version>1.2.47</fastjson.version>
 		<swagger2.version>2.9.2</swagger2.version>
+		<jsoup.version>1.11.3</jsoup.version>
 	</properties>
 
 	<dependencies>
@@ -95,7 +96,19 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>${jsoup.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
