--- a/wx-backend/pom.xml
+++ b/wx-backend/pom.xml
@@ -37,7 +37,7 @@
 			<optional>true</optional>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>${mybatis-spring-boot-starter}</version>
@@ -52,7 +52,7 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>${druid.version}</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
