--- a/wx-backend/pom.xml
+++ b/wx-backend/pom.xml
@@ -18,6 +18,7 @@
 		<fastjson.version>1.2.47</fastjson.version>
 		<swagger2.version>2.9.2</swagger2.version>
 		<jsoup.version>1.11.3</jsoup.version>
+		<commons-io.version>2.6</commons-io.version>
 	</properties>
 
 	<dependencies>
@@ -37,22 +38,11 @@
 			<optional>true</optional>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.mybatis.spring.boot</groupId>
-			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>${mybatis-spring-boot-starter}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>${druid.version}</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.mybatis.spring.boot</groupId> <artifactId>mybatis-spring-boot-starter</artifactId> 
+			<version>${mybatis-spring-boot-starter}</version> </dependency> <dependency> 
+			<groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> </dependency> 
+			<dependency> <groupId>com.alibaba</groupId> <artifactId>druid</artifactId> 
+			<version>${druid.version}</version> </dependency> -->
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -106,6 +96,12 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
 		</dependency>
 
 
