--- a/web-shotacon/src/main/resources/application.yml
+++ b/web-shotacon/src/main/resources/application.yml
@@ -22,6 +22,9 @@ logging:
       
       
 spring: 
+  mvc:
+    favicon: 
+      enabled: false
   thymeleaf: 
     prefix: classpath:/templates/
     suffix: .html
