--- a/web-shotacon/src/main/resources/application.yml
+++ b/web-shotacon/src/main/resources/application.yml
@@ -37,3 +37,9 @@ spring:
         content: 
           enabled: true
           paths: /**
+  # MongoDB
+  data: 
+    mongodb: 
+      uri: mongodb://@47.95.117.48:27017/user
+          
+
