--- a/web-shotacon/pom.xml
+++ b/web-shotacon/pom.xml
@@ -44,6 +44,11 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+		</dependency>
+
 		<!-- <dependency> <groupId>org.mybatis.spring.boot</groupId> <artifactId>mybatis-spring-boot-starter</artifactId> 
 			<version>${mybatis-spring-boot-starter}</version> </dependency> <dependency> 
 			<groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> </dependency> 
